--- a/assets/style.css
+++ b/assets/style.css
@@ -113,7 +113,7 @@
     --bg-color: #FFFFFF;
     --text-color: #000000;
     --lighter-text-color: #888;
-    --accent-color: #D04611;
+    --accent-color: #e51400;
     --invisible-link-hover-color: #f35f5f25;
     --body-width: 607px;
 }
